--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -40,9 +40,9 @@ jobs:
 
     - name: Step 05 - Terraform Init
       run : terraform
-              -chdir=$workdir
+              chdir=$workdir
               init
-              -input=false
+              input=false
 
     - name: Step 06 - Terraform Validate
       run : terraform
