--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -39,10 +39,10 @@ jobs:
         aws-region           : us-east-1
 
     - name: Step 05 - Terraform Init
-      run : terraform        
+      run : terraform
               -chdir=$WORKDIR
               init
-              input=false
+              -input=false
 
     - name: Step 06 - Terraform Validate
       run : terraform
